# Freddy

./: LICENSE  README.md  main.py  pyproject.toml
cogs/: cogs.py  help.py  messages.py  novice.py  teams.py  tests.py
core/: bot.py  data.py  keep_alive.py  util.py
test/02/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/03/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/04/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/05/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/06/: 0.txt  1.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/07/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/08/: 1.txt  2.txt  4.txt  6.txt  7.txt  8.txt  9.txt
test/09/: 0.txt  1.txt  3.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/10/: 0.txt  1.txt  2.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/11/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/12/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/13/: 0.txt  1.txt  2.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/14/: 0.txt  2.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/15/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/16/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/18/: 0.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/19/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/20/: 0.txt  1.txt  2.txt  3.txt  4.txt  (+5 more)
(+60 files in other folders)
